--- a/2020/materials/day6-experiments/03-making-it-happen.tex
+++ b/2020/materials/day6-experiments/03-making-it-happen.tex
@@ -5,17 +5,18 @@
 \usepackage{framed}
 \usepackage{comment}
 
-\def\vf{\vfill}
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=cyan,
+}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
-\title[]{Making it happen}
+\title[]{\textcolor{gray}{[What, why, and which experiments?], \newline [Moving beyond simple experiments]}, [Making it happen], \textcolor{gray}{\newline [Zero variable cost data and MusicLab], [3 Rs]}}
 \author[]{Matthew J. Salganik\\Department of Sociology\\Princeton University}
-\date[]{Summer Institutes in Computational Social Science\\June 22, 2019
-\vfill
-\begin{flushleft}
-{\scriptsize
-The Summer Institutes in Computational Social Science is supported by grants from the Russell Sage Foundation and the Alfred P. Sloan Foundation.}
-\end{flushleft}
+\date[]{
 \begin{flushright}
 \includegraphics[width=0.1\textwidth]{figures/cc-by.png}
 \end{flushright}
