--- a/2020/materials/day6-experiments/04-zero-variable-cost.tex
+++ b/2020/materials/day6-experiments/04-zero-variable-cost.tex
@@ -5,17 +5,18 @@
 \usepackage{framed}
 \usepackage{comment}
 
-\def\vf{\vfill}
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=cyan,
+}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
-\title[]{Zero variable cost experiments and MusicLab}
+\title[]{\textcolor{gray}{[What, why, and which experiments?], \newline [Moving beyond simple experiments], [Making it happen]},\newline [Zero variable cost data and MusicLab],  \textcolor{gray}{[3 Rs]}}
 \author[]{Matthew J. Salganik\\Department of Sociology\\Princeton University}
-\date[]{Summer Institutes in Computational Social Science\\June 22, 2019
-\vfill
-\begin{flushleft}
-{\scriptsize
-The Summer Institutes in Computational Social Science is supported by grants from the Russell Sage Foundation and the Alfred P. Sloan Foundation.}
-\end{flushleft}
+\date[]{
 \begin{flushright}
 \includegraphics[width=0.1\textwidth]{figures/cc-by.png}
 \end{flushright}
@@ -50,7 +51,7 @@ Main sources of variable costs:
 \item participant payment
 \end{itemize}
 
-\vf
+\vfill
 \pause
 Solutions:
 \begin{itemize}
@@ -153,19 +154,9 @@ Results: \pause
   \includegraphics[width=0.7\textwidth]{figures/zero_variable_cost_experiments_musiclab}
 \end{figure}
 
-\vf
+\vfill
 \pause
 \Large{Zero variable cost is a means not an end.}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-{\Large
-\begin{center}
-Behind the MusicLab?
-\end{center}
-}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%
@@ -176,7 +167,7 @@ Behind the MusicLab?
   \includegraphics[width=0.8\textwidth]{figures/milkman_temporal_2012_title.png}
 \end{figure}
 
-\vf
+\vfill
 \tiny{\url{http://dx.doi.org/10.1177/0956797611434539}}
 
 \end{frame}
@@ -233,13 +224,9 @@ zero variable cost and zero variable cost to you
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
+\frame{\titlepage}
+%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{center}
-\Large Questions?
-\end{center}
-
-\end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%
 
 
