experiments, tweks before shooting

--- a/2020/materials/day6-experiments/02-moving-beyond-simple-experiments.tex
+++ b/2020/materials/day6-experiments/02-moving-beyond-simple-experiments.tex
@@ -152,7 +152,7 @@ Heterogeneous treatment effects \pause
 \begin{itemize}
 \item lots of people, lots of pre-treatment information: stop treating people like widgets
 \pause
-\item beware of fishing
+\item beware of fishing (preregistration, data splits)
 \pause
 \item Lots of new methods in this area
 \end{itemize}
@@ -162,6 +162,11 @@ Heterogeneous treatment effects \pause
 \begin{frame}
 
 Mechanisms \pause
+\begin{itemize}
+\item Eating citrus prevents scurvy \pause
+\item The mechanism through which citrus prevents scurvy vitamin C
+\end{itemize}
+
 \begin{itemize}
 \item Not as easy as scurry and limes, ``Enough already about black box experiments''  \textcolor{blue}{\href{http://dx.doi.org/10.1177/0002716209351526}{Green et al (2010)}}
 \pause
@@ -177,9 +182,6 @@ Mechanisms \pause
 Optimization experiments + Understanding experiments
 \end{center}
 }
-
-\pause
-This is particularly important if you want to partner with the powerful.  But it is very hard.
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%
