ffchallenge activity slides

--- a/2020/materials/day5-mass-collaboration/06-ffchallenge_participate_activity.tex
+++ b/2020/materials/day5-mass-collaboration/06-ffchallenge_participate_activity.tex
@@ -7,6 +7,15 @@
 \usepackage{hyperref}
 \usepackage{ulem}
 
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=cyan,
+}
+
+
 %\usepackage{tikz}
 %\beamertemplatenavigationsymbolsempty
 %\usetikzlibrary{arrows,shapes.arrows,positioning,shapes}
@@ -237,9 +246,9 @@ Job training\footnote{Learn more at \url{http://www.fragilefamilieschallenge.org
 \begin{frame}
 
 \begin{itemize}
-\item When you applied to get access to the data, you completed a data use agreement
+\item When you applied to get access to the data, you completed a data use agreement. Honor that agreement.
 \pause
-\item After this activity you should delete the data from your computer unless you plan to keep using it for research
+\item After this activity you should delete the data from your computer. If you plan to do more research, you can download it again.
 \end{itemize}
 
 \end{frame}
@@ -305,7 +314,7 @@ How do I know what these variables are?
 \begin{frame}
 
 Questionnaire:\\
-\centering\includegraphics[width = .8\textwidth]{figures/Doc4}
+\centering\includegraphics[width = .8\textwidth]{figures/f5f1_skip}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -464,7 +473,7 @@ Deal with unordered categorical variables
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
-Here are the approaches that participants used in the Challenge (Key ideas are flexibility and over-fitting):
+Here are some approaches that participants used in the Challenge (key ideas are flexibility and over-fitting):
 
 \begin{itemize}
 \item general linear model (linear and logistic regression)
@@ -505,11 +514,7 @@ Submissions include:
 \end{enumerate}
 
 \vfill
-\begin{itemize}
-\item Submission preparation instructions: \href{http://www.fragilefamilieschallenge.org/upload-your-contribution/}{www.fragilefamilieschallenge.org/upload-your-contribution/} \pause
-\item We've created a template submission for you \href{TODO IAN: Add url}{template} \pause
-\item You can upload to the \href{TODO IAN: Add url}{SICSS 2020 leaderboard}.
-\end{itemize}
+See the \href{https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md}{lesson plan for participants} for more information about building and uploading your submission
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -532,15 +537,7 @@ Submissions include:
 \begin{frame}
 
 \begin{center}
-\LARGE Remember this is not easy, especially in a short amount of time.  Many valid submissions to the Challenge did not beat the 4 variable regression model.
-\end{center}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{center}
-\LARGE At the end of the activity we will open the holdout data. Anyone that beats the best submission to the Challenge will receive a prize.
+\LARGE Remember this is not easy,\\ especially in a short amount of time.
 \end{center}
 
 \end{frame}
