post video improvement

--- a/2020/materials/day5-mass-collaboration/06-ffchallenge_participate_activity.tex
+++ b/2020/materials/day5-mass-collaboration/06-ffchallenge_participate_activity.tex
@@ -297,24 +297,38 @@ How do I know what these variables are?
 
 \centering\includegraphics[width = .8\textwidth]{figures/Doc1}
 
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\centering\includegraphics[width = .8\textwidth]{figures/Doc2}
+\vfill
+\url{https://fragilefamilies.princeton.edu/}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 
-\centering\includegraphics[width = .8\textwidth]{figures/Doc3}
+\begin{center}
+\includegraphics[width = .8\textwidth]{figures/Doc2}
+\end{center}
 
+\vfill
+\url{https://fragilefamilies.princeton.edu/}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
+\begin{center}
+\includegraphics[width = .8\textwidth]{figures/Doc3}
+\end{center}
+
+\vfill
+\url{https://fragilefamilies.princeton.edu/}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 
 Questionnaire:\\
-\centering\includegraphics[width = .8\textwidth]{figures/f5f1_skip}
+\begin{center}
+\includegraphics[width = .8\textwidth]{figures/f5f1_skip}
+\end{center}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
