improve experiments slides

--- a/2020/materials/day6-experiments/03-making-it-happen.tex
+++ b/2020/materials/day6-experiments/03-making-it-happen.tex
@@ -27,7 +27,29 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 
-I think there are four main strategies for actually making digital experiments happen.  None of these approaches is perfect.
+\begin{columns}
+\begin{column}{.40\textwidth}
+\includegraphics[width=\textwidth]{figures/salganik_bit_2018_cover}
+\end{column}%
+
+\hfill%
+
+\begin{column}{.60\textwidth}
+1) Introduction \\
+2) Observing behavior \\
+3) Asking questions \\
+\textcolor{blue}{4) Running experiments} \\
+5) Mass collaboration \\
+6) Ethics \\
+7) The future \\
+\end{column}%
+\end{columns}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
+Here are four main strategies for actually making digital experiments happen.  None of these approaches is perfect.
 \begin{itemize}
 \item cost
 \pause
@@ -91,7 +113,15 @@ How to partner with the powerful?
 \end{center}
 
 \vfill
-\url{https://doi.org/10.1111/ecoj.12082}
+\href{https://doi.org/10.1111/ecoj.12082}{Doleac and Stein (2013)}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
+\begin{center}
+\includegraphics[width=\textwidth]{figures/exp_making_it_happen_slides_2}
+\end{center}
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%
@@ -111,6 +141,14 @@ How to partner with the powerful?
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
+\begin{center}
+\includegraphics[width=\textwidth]{figures/exp_making_it_happen_slides_3}
+\end{center}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 
 \begin{center}
@@ -143,13 +181,8 @@ How to partner with the powerful?
 
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-
-\begin{center}
-\LARGE Questions?
-\end{center}
-
-\end{frame}
+\frame{\titlepage}
+%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 \end{document}
