--- a/2020/materials/day6-experiments/04-zero-variable-cost.tex
+++ b/2020/materials/day6-experiments/04-zero-variable-cost.tex
@@ -27,6 +27,28 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 
+\begin{columns}
+\begin{column}{.40\textwidth}
+\includegraphics[width=\textwidth]{figures/salganik_bit_2018_cover}
+\end{column}%
+
+\hfill%
+
+\begin{column}{.60\textwidth}
+1) Introduction \\
+2) Observing behavior \\
+3) Asking questions \\
+\textcolor{blue}{4) Running experiments} \\
+5) Mass collaboration \\
+6) Ethics \\
+7) The future \\
+\end{column}%
+\end{columns}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
 {\Large
 \begin{center}
 Experiments at scale
@@ -110,6 +132,84 @@ Music Lab: a zero variable cost experiment with Peter Dodds and Duncan Watts
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 
+  \begin{columns}
+    \column{0.4\textwidth}
+     \begin{block}{}
+       \includegraphics[width=\textwidth]{figures/hp-cover.pdf}
+     \end{block}
+
+   \pause
+   
+   \column{0.6\textwidth}
+     \begin{block}{}
+       \begin{itemize}
+         \item Wild success
+         \item Rejected by eight publishers\\
+       \end{itemize}
+       This seems like a strange combination.
+     \end{block}
+  \end{columns}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
+  \begin{columns}
+    \column{0.4\textwidth}
+     \begin{block}{}
+       \includegraphics[width=\textwidth]{figures/star-wars}
+     \end{block}
+   
+   \column{0.6\textwidth}
+     \begin{block}{}
+       \begin{itemize}
+         \item Set box office records, won 6 Oscars, and launched a multi-billion dollar franchise
+         \item Rejected by United Artists and Universal before being made by Fox
+       \end{itemize}
+     \end{block}
+  \end{columns}
+
+\end{frame}
+%%%%%%%%%%%%
+\begin{frame}
+
+  \begin{columns}
+    \column{0.4\textwidth}
+     \begin{block}{}
+       \includegraphics[width=\textwidth]{figures/american-idol}
+     \end{block}
+
+   \column{0.6\textwidth}
+     \begin{block}{}
+       \begin{itemize}
+         \item One of the most popular shows of the decade
+         \item Rejected by ABC, CBS, and NBC before being picked up by Fox
+       \end{itemize}
+     \end{block}
+  \end{columns}
+
+\end{frame}
+%%%%%%%%%%%%%%%%
+\begin{frame}
+
+Puzzling nature of success for cultural objects (books, movies, piece of art, music)
+\begin{itemize}
+  \item<1-> {extreme inequality in the success of objects}
+  \item <2->{unpredictability in the success of objects}
+\end{itemize}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame} 
+
+\begin{figure}
+  \includegraphics[width = 0.8\textwidth]{figures/musiclab_model}
+\end{figure}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
 \begin{figure}
   \centering
   \includegraphics[width=0.9\textwidth]{figures/expdesign_4}
@@ -135,7 +235,105 @@ Music Lab: a zero variable cost experiment with Peter Dodds and Duncan Watts
 
 \begin{figure}
   \centering
-   \includegraphics[width=0.95\textwidth]{figures/bitbybit4-23_salganik_experimental_2006_fig3ac}
+  \includegraphics[width= 0.6\textwidth]{figures/listenchoice_v1_smoothed_1}
+\end{figure}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
+\setcounter{subfigure}{0}
+\begin{figure}
+  \centering
+     \subfigure[Experiment 1, weaker signal]{
+     \includegraphics[width=0.45\textwidth]{figures/listenchoice_v1_v2scale_smoothed_1}}
+  \hspace{0in}
+    \subfigure[Experiment 2, stronger signal]{
+     \includegraphics[width=0.45\textwidth]{figures/listenchoice_v2_smoothed}}
+\end{figure}
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=0.7\textwidth]{figures/gini_v1_unordered_ci}
+\end{figure}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=3in]{figures/compare_gini_v1v2_unordered_ci}
+\end{figure}
+
+Median Gini coefficient increases from $0.34$ (France) to $0.50$ (Nigeria)
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
+$U$ = mean difference in market share across all pairs of realizations\\
+\begin{figure}
+  \centering
+  \includegraphics[width = 3in]{figures/arbitrary_example}
+\end{figure}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
+\begin{figure}
+  \centering
+  \includegraphics[width = 3.5in]{figures/unpredictability_v1}
+\end{figure}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=3in]{figures/compare_unpred_v1v2}
+\end{figure}
+
+Unpredictability increases by about 50\%
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
+Experiments 1 and 2 show a dose-response relationship.  Increasing the strength of social influence leads to
+
+\begin{itemize}
+  \item increased inequality of success
+  \item increased unpredictability of success
+\end{itemize}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
+What is the relationship between ``quality'' and success?
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=0.85\textwidth]{figures/bitbybit4-23_salganik_experimental_2006_fig3a}
+\end{figure}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
+\begin{figure}
+  \includegraphics[width=0.85\textwidth]{figures/bitbybit4-23_salganik_experimental_2006_fig3ac}
 \end{figure}
 
 Results: \pause
@@ -143,6 +341,8 @@ Results: \pause
 \item More social influence leads to more unpredictability
 \pause
 \item You can predict failure but you can't predict success
+\pause 
+\item \href{http://dx.doi.org/10.1126/science.1121066}{Salganik, Dodds, and Watts (2006)}
 \end{itemize}
  
 \end{frame}
@@ -226,8 +426,6 @@ zero variable cost and zero variable cost to you
 %%%%%%%%%%%%%%%%%%%%%%%%
 \frame{\titlepage}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 \end{document}
