tweaks to slides before shooting

--- a/2020/materials/day6-experiments/04-zero-variable-cost.tex
+++ b/2020/materials/day6-experiments/04-zero-variable-cost.tex
@@ -90,8 +90,6 @@ Solutions:
   \includegraphics[width = 0.9\textwidth]{figures/splashscreen}
 \end{figure}
 
-Music Lab: a zero variable cost experiment with Peter Dodds and Duncan Watts
-
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
@@ -143,10 +141,9 @@ Music Lab: a zero variable cost experiment with Peter Dodds and Duncan Watts
    \column{0.6\textwidth}
      \begin{block}{}
        \begin{itemize}
-         \item Wild success
+         \item Wild success \pause
          \item Rejected by eight publishers\\
        \end{itemize}
-       This seems like a strange combination.
      \end{block}
   \end{columns}
 
@@ -192,10 +189,10 @@ Music Lab: a zero variable cost experiment with Peter Dodds and Duncan Watts
 %%%%%%%%%%%%%%%%
 \begin{frame}
 
-Puzzling nature of success for cultural objects (books, movies, piece of art, music)
+Puzzling nature of success for cultural objects (books, movies, piece of art, music, TV shows)
 \begin{itemize}
-  \item<1-> {extreme inequality in the success of objects}
-  \item <2->{unpredictability in the success of objects}
+  \item<1-> {extreme inequality in success}
+  \item <2->{unpredictability of success}
 \end{itemize}
 
 \end{frame}
