--- a/2020/materials/day6-experiments/05-three-rs.tex
+++ b/2020/materials/day6-experiments/05-three-rs.tex
@@ -27,6 +27,28 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 
+\begin{columns}
+\begin{column}{.40\textwidth}
+\includegraphics[width=\textwidth]{figures/salganik_bit_2018_cover}
+\end{column}%
+
+\hfill%
+
+\begin{column}{.60\textwidth}
+1) Introduction \\
+2) Observing behavior \\
+3) Asking questions \\
+\textcolor{blue}{4) Running experiments} \\
+5) Mass collaboration \\
+6) Ethics \\
+7) The future \\
+\end{column}%
+\end{columns}
+
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+
 \begin{center}
 \includegraphics[width=0.5\textwidth]{figures/cute_kitten_kittenwar}
 \end{center}
