--- a/2020/materials/day2-digital-trace-data/building-apps-bots/rmarkdown/Building_Apps_and_Bots)_for_Social_Science_Research.Rmd
+++ b/2020/materials/day2-digital-trace-data/building-apps-bots/rmarkdown/Building_Apps_and_Bots)_for_Social_Science_Research.Rmd
@@ -16,15 +16,14 @@ editor_options:
 **Chris Bail**  
 **Duke University**  
 **[www.chrisbail.net](http://www.chrisbail.net)**  
-**[Check out my Text as Data Course](https://cbail.github.io/textasdata/Text_as_Data.html)** 
 
-# Introduction
+
+## Introduction
 
 This is part of a series of tutorials I've written on collecting digital trace data from sites such as Twitter, or other internet sources. These earlier tutorials demonstrated some of the potential of digital trace data, but also highlighted many limitations of these new wellsprings of data as well. For example, digital trace data are often incomplete, inaccessible, non-representative, unstructured--and thus difficult to work with-- and sensitive in nature. Because of these limitations, there is growing consensus that hybrid approaches are needed that combine digital trace data with more conventional methods such as surveys.
 
-**Note: this tutorial is a work in progress. It will be updated soon to include more annotated code**
 
-# Building Apps for Social Science Research
+## Building Apps for Social Science Research
 
 The term "app" has come to refer to an impressive array of software-- from mobile tools we use to find our way around to desktop-based tools for editing photos. In [this article](https://drive.google.com/file/d/0Byvk0A8Ic21YMC1SNHIzWU5jSXc/view), I make the case that apps can also be extremely useful for social scientists. More specifically, I argue that apps can provide a vehicle for social scientists to collect digital trace data alongside survey data. There are numerous advantages of such a hybrid strategy-- for example, surveys can be used to collect demographic information about those who produce social media texts in order to evaluate issues of coverage and representativeness. Or, surveys can be used to collect information about other confounding factors. What is more, authentication dialogues within apps provide a natural opportunity to obtain informed consent from social media users-- though this was not done in a comprehensive manner in past studies such as those that became central to the Cambridge Analytica scandal.
 
@@ -32,7 +31,7 @@ To demonstrate the potential of apps for social science research it will be usef
 
 To solve this problem, I created a web-based app called "Find Your People." Find Your People allowed non-profit organizations to get high-quality analysis of their social media outreach via comparisons to their peers who had also installed the app. In return, organizations agreed to share non-public aggregate data about their audiences with me known as Facebook "insights data"-- these include metrics such as the number of people age 18-24 who viewed a post on a given day, but not the names of those people or other information that could be used to easily identify them. In addition, Find Your People asked non-profit organizations to complete a brief web-based survey that allowed me to collect additional information about the organization. I recruited non-profit groups working in the fields of Autism Spectrum Disorders and Human Organ Donation, respectively, to install the apps. Response rates to these requests were relatively high, and I identified minimal evidence of response bias. I used this tool to develop a new theory of how social media posts go viral. Readers who are interested in this theory-- or those would would like to see more detail about how the apps were employed-- can view [this paper](http://www.pnas.org/content/pnas/113/42/11823.full.pdf?with-ds=yes), [this paper](https://ajph.aphapublications.org/doi/pdf/10.2105/AJPH.2016.303181), [this paper](https://drive.google.com/file/d/179SpJoLuyOyOgOFEenlziOPmfkVLjnFH/view), or [this paper](https://drive.google.com/file/d/0Byvk0A8Ic21YRmR4cWxteDd0TXM/view).
 
-# How to Build Apps
+## How to Build Apps
 
 When I created the Find Your People app, app-building required somewhat involved knowledge of programming in multiple languages, web design, and cloud computing. Yet the R program [Shiny](https://shiny.rstudio.com/) has become a gamechanger. Shiny is an interactive app building tool that you can use directly from rStudio. In addition to an easy to use, integrated app building tool, RStudio also provides a variety of tools to host and deploy apps on the web with the click of a button. Finally, there is a vibrant community of Shiny app developers--- many of whom share the code they used to create their apps on sites such as [this one](https://www.showmeshiny.com/). 
 
@@ -43,26 +42,25 @@ Though Shiny has numerous advantages, it is limited in its capacity to work nati
 Getting Flutter up and running requires some time and patience. I recommend using a combination of Visual Studio Code and the iOS simulator that ships with mac's Xcode (or the Android equivalent, Android Studio). There are a variety of great tutorials that can help you get set up with this workflow. [This one](https://flutter.dev/docs/get-started/install) is my favorite so far. Though Flutter is still relatively new, there are also a variety of [great sample apps](https://github.com/flutter/samples/blob/master/INDEX.md) that you can use as a guide to build your own. My Polarization Lab will soon open-source a mobile chat platform we are building to study politics and social media, and I hope that will help inspire more academics to use this impressive tool. 
 
 
-# Building Bots for Social Science Research
+## Building Bots for Social Science Research
 
 Another recent trend in studies that employ digital trace data is the creation of bots, or automated social media accounts. In a very [creative study](https://internet.psych.wisc.edu/wp-content/uploads/532-Master/532-UnitPages/Unit-06/Munger_PB_2017.pdf), political science PhD Student Kevin Munger build an app designed to examine racial harrassment on Twitter. He created two automated accounts-- one of which had a profile picture with a white person and the other with an African-American person. The bots were then designed to a) search Twitter for tweets by white men that contain racist language; and then b) reply to these tweets with condemnations of the racist language. Notwithstanding some limitations of the research design, this study suggests that people are more likely to stop using racist language if they are chastized by the bot with the White person pictured in its Twitter profile than the African-American person pictured in its Twitter profile.
 
 
 <br>
-<div style="width:600px;">
-![](Munger.png)
+![](Munger.png){width=600px}
 </div>
 <br>
 
 In a [recent study](https://osf.io/preprints/socarxiv/4ygux), my coauthors and I created bots designed to disrupt social media echo chambers in order to examine how they shape the formation of political views. We surveyed a large sample of Democrats and Republicans who visit Twitter at least three times each week about a range of social policy issues. One week later, we randomly assigned respondents to a treatment condition in which they were offered financial incentives to follow a Twitter bot for one month that exposed them to messages produced by elected officials, organizations, and other opinion leaders with opposing political ideologies. Respondents were re-surveyed at the end of the month to measure the effect of this treatment, and at regular intervals throughout the study period to monitor treatment compliance. We find that Republicans who followed a liberal Twitter bot became substantially more conservative post-treatment, and Democrats who followed a conservative Twitter bot became slightly more liberal post-treatment. 
 
 <br>
-![](Bail_research_design.png)
+![](Bail_research_design.png){width=600px}
 <br>
 
 This study was somewhat more involved than the Munger study (and also much more expensive) since it combined not only observation of publicly-available Twitter data, but also linked these data to surveys of a large group of people. The bots were also somewhat more sophisticated in that they were created using a variety of sophisticated tools from social network analysis and the field of natural language processing. Still, these bots were not terribly difficult to create, and I describe the steps needed to create a bot such as ours in the following section.
 
-# How to Create a Bot
+## How to Create a Bot
 
 One way to create a bot is to write a .R script that is hosted on a single computer and runs throughout the study period. Yet such a strategy presents numerous obstacles. First, it ties up the R session on a machine and it therefore cannot be used for other routine work. Users have to either have another computer or a lot of time on their hands. It is possible for users to run multiple R sessions on a single machine, and activity within each R session should not interfere with other active sessions. However, multiple R sessions may not be appropriate if activity within one or more R sessions proves too computationally intensive.  Second, bots that are hosted on a single laptop or desktop can typically only be accessed or controlled from that machine. Third, all machines are prone to failure, and if the machine that hosts the app fails, valuable time can go by during a field experiment before the researcher becomes aware of the failure.
 
@@ -92,7 +90,7 @@ Needless to say, bots can be much more sophisticated-- writing code to make bots
 Most studies will also require data collection of those whom the bot interacts with. Such data can be collected within the bot code, or in a separate script that monitors accounts that are selected for interaction by a bot. Once again, make sure your bot does not conflict with Twitter's terms of service, and does not abuse rate limits.
 
 
-# Ethical Issues in App and Bot-Based Research
+## Ethical Issues in App and Bot-Based Research
 
 Ethical issues in app and bot-based research are manifold and IRB guidelines for such research are in their infancy. For these reasons, it is vital--- in my view---that computational social scientists hold themselves to a standard that is higher than IRB because there will no doubt be ethical issues on the horizons that we do not yet know exist. The Cambridge Analytica scandal may only be the tip of the iceberg in terms of the potential for data collected by apps to be repurposed or merged with other datasets for other purposes. Such issues, combined with the perrenial issue of data security and the challenge of maintaining confidentiality with increasingly detailed data-- or meta data--should inspire researchers to carefully review their plans not only with the IRB, but also with other members of the computational social science community who can help them ensure that their research is ethical and safe.
 
