basic text markdown edits

--- a/2020/materials/day3-text-analysis/basic-text-analysis/rmarkdown/Basic_Text_Analysis_in_R.Rmd
+++ b/2020/materials/day3-text-analysis/basic-text-analysis/rmarkdown/Basic_Text_Analysis_in_R.Rmd
@@ -21,10 +21,13 @@ This tutorial is designed to introduce you to the basics of text analysis in R. 
 One of the first things that is important to learn about quantitative text analysis is to most computer programs, texts or strings also have a numerical basis called character encoding. Character encoding is a style of writing text in computer code that helps programs such as web browsers figure out how to display text. There are presently dozens of different types of character encoding that resulted not only from advances in computing technology---and the development of different styles for different operating systems---but also for different languages (and even new languages such as emoji). The figure below illustrates a form of character encoding called "Latin Extended-B" which was developed for representing text in languages derived from Latin (which of course excludes a number of important languages)
 
 <br>
-![](character-viewer.png)
+![](character-viewer.png){width=400px}
 <br>
 
-Why should you care that text can be created using different forms of character encoding? Well, if you have scraped a large amount of data from multiple websites---or multiple social media sites--- you may find that your data exist in multiple types of character encoding, and this can create a big hassle. Before we begin working with a text-based dataset, it is useful to either a) make sure every text uses the same character encoding; or b) use a tool to force or coerce all text into a single character encoding. The `Encoding` and `inconv` functions in base R can be very useful for the latter purposes. Note, however, that the latter function may create "place holders" for characters that it cannot process. For example, if an old version of character encoding is applied to text that contains emoji, the emoji may appear as strings of seeminly incoherent symbols and punctuation marks.
+Why should you care that text can be created using different forms of character encoding? Well, if you have scraped a large amount of data from multiple websites---or multiple social media sites--- you may find that your data exist in multiple types of character encoding, and this can create a big hassle (see the figure below). Before we begin working with a text-based dataset, it is useful to either a) make sure every text uses the same character encoding; or b) use a tool to force or coerce all text into a single character encoding. The `Encoding` and `inconv` functions in base R can be very useful for the latter purposes. Note, however, that the latter function may create "place holders" for characters that it cannot process. For example, if an old version of character encoding is applied to text that contains emoji, the emoji may appear as strings of seeminly incoherent symbols and punctuation marks.
+
+<br>
+![](encoding_over_time.png){width=600px}
 
 Inconsistent character encoding is one of the most common pitfalls for those attempting to learn how to perform quantitative text analysis in R, but there are no easy solutions. If you try to run the code below and receive error messages such as `invalid multibyte string`, this is indicative of a character encoding issue that you will most likely need to resolve using one of the imperfect steps above. 
 
@@ -37,13 +40,13 @@ To demonstrate why you need to learn some GREP, let's return to an issue we enco
 Let's create a character string that includes such characters as follows (the meaning of the text isn't important- this was scraped from the Duke University web page "Events" section):
 
 ```{r}
-duke_web_scrape<- "Class of 2018: Senior Stories of Discovery, Learning and Serving\n\n\t\t\t\t\t\t\t" 
+duke_web_scrape<- "Duke Experts: A Trusted Source for Policy Makers\n\n\t\t\t\t\t\t\t" 
 ```
 
-Once again, GREP-style commands search for a certain pattern. For example, let's write some code that determines whether the word "Class" is part of our string using the `grepl` function in base R:
+Once again, GREP-style commands search for a certain pattern. For example, let's write some code that determines whether the word "Experts" is part of our string using the `grepl` function in base R:
 
 ```{r}
-grepl("Class", duke_web_scrape)
+grepl("Experts", duke_web_scrape)
 ```
 
 The text within quotes is the pattern we are trying to find, and the second argument is the string we want to search within. The output tells us that there was one occurrence of "Class."
@@ -62,11 +65,11 @@ We can also pass two arguments at once using the `|` separator as follows:
 gsub("\t|\n", "", duke_web_scrape)
 ```
 
-GREP-style commands also include a wildcard which can be used to, for example, find all words in a string that start with a certain letter, such as "P":
+GREP-style commands also include a wildcard which can be used to, for example, find all words in a string that start with a certain character, such as "F":
 
 ```{r}
-some_text<-c("This","Professor","is","not","so","great")
-some_text[grep("^[P]", some_text)]
+some_text<-c("Friends","don't","let","friends","make","wordclouds")
+some_text[grep("^[F]", some_text)]
 ```
 
 [Here](http://www.rstudio.com/wp-content/uploads/2016/09/RegExCheatsheet.pdf) is a useful cheatsheet that includes more examples of how to use GREP to find patterns in text.
@@ -75,7 +78,7 @@ GREP commands are fairly straight forward, and much more powerful and useful for
 
 ```{r, eval=FALSE}
 text_chunk<-c("[This Professor is not so Great]")
-gsub("\","", text_chunk)
+gsub("[","", text_chunk)
 ```
 
 We receive an error message when we run the code above because the `\` character has a literal meaning to R because it is part of something called a regular expression. To remove this character, and other characters like it, we need to "escape" the character using single quotation marks wraped around a double `\\` as follows:
@@ -85,16 +88,32 @@ gsub('\\[|\\]',"", text_chunk)
 ```
 
 
-
 # Tokenization
 
 Another important concept that is necessary to master to perform quantitative text analysis is Tokenization. Tokenization refers to the way you are definining the unit of analysis. This might include words, sequences of words, or entire sentences. The figure below provides an example of one way to tokenize a simple sentence.
 
-<br>
-![](token.png)
+```{r, eval=FALSE}
+<sentence>
+  
+<word>Friends</word
+
+<word>don't</word>
+
+<word>let</word>
+
+<word>friends</word>
+
+<word>make</word>
+
+<word>word</word>
+
+<word>clouds</word>
+
+</sentence>
+```
 <br>
 
-This figure illustrates the most common way of tokenizing a text---by individual word. Many techniques in quantitative text analysis also analyze what are known as "n-grams" however. Ngrams are simply sequences of words with length "n." For example, the sentence above could be written in ngram form as "the quick brown", "quick brown fox", "brown fox jumps" and so on. N-grams can be useful when word-order is important, as I will discuss in additional detail below. For now, let me give you a simple example: "I hate the president" and "I'd hate to be the president."
+This figure illustrates the most common way of tokenizing a text---by individual word. Many techniques in quantitative text analysis also analyze what are known as "n-grams" however. Ngrams are simply sequences of words with length "n." For example, the sentence above could be written in ngram form as "Friends don't let", "don't let friends", "friends make word" and so on. N-grams can be useful when word-order is important, as I will discuss in additional detail below. For now, let me give you a simple example: "I hate the president" and "I'd hate to be the president."
 
 # Creating a Corpus
 
@@ -136,12 +155,12 @@ install.packages("tidytext")
 Now let's load our database of Trump tweets into `tidytext` format--- since the `tidytext` package is part of the `tidyverse`, which is a family of packages that work well together in R that includes other popular packages such as `dplyr` and `ggplot2` we will use the "piping" style of coding (`%>%`) associated with such packages:
 
 ```{r, warning=FALSE, message=FALSE}
-
 library(tidytext)
 library(dplyr)
 tidy_trump_tweets<- trumptweets %>%
     select(created_at,text) %>%
     unnest_tokens("word", text)
+head(tidy_trump_tweets)
 ```
 
 A major advantage of `tidytext` format is that once the text has been tidy-ed, regular R functions can be used to analyze it instead of the specialized functions necessary to analyze a Corpus object. For example, to count the most popular words in Trump's tweets, we can do the following:
